--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "better-sqlite3": "^7.1.2",
     "discord-paginationembed": "^2.1.0",
     "discord.js": "^12.5.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "node-cron": "^2.0.3",
     "node-fetch": "^2.6.1",
