--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "quick.db": "^7.0.0-b22",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
+    "string-progressbar": "^1.0.3",
     "uws": "^100.0.1",
     "weather-js": "^2.0.0",
     "xmlhttprequest": "^1.8.0"
