--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cron": "^1.8.2",
     "discord-api-types": "^0.22.0",
     "discord-blackjack": "^2.0.5",
+    "discord-gamecord": "^2.0.0",
     "discord-paginationembed": "^2.1.0",
     "discord.js": "^13.2.0-dev.1629331451.d6e6244",
     "discord.js-pagination": "^1.0.3",
