--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@discordjs/voice": "^0.6.0",
     "@distube/soundcloud": "^0.2.2",
     "@distube/spotify": "^0.6.3",
+    "@types/node": "^18.6.3",
     "cataas-api": "^1.1.2",
     "chart.js": "^3.3.2",
     "chartjs-node-canvas": "^3.2.0",
@@ -29,12 +30,15 @@
     "moment-timezone": "^0.5.33",
     "mongodb": "^3.6.9",
     "mongoose": "^5.12.13",
+    "mysql2": "^2.3.3",
     "node-cron": "^3.0.0",
     "npm": "^7.15.1",
     "opusscript": "^0.0.8",
+    "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
     "slot-machine": "^2.1.0",
     "string-progressbar": "^1.0.4",
+    "typeorm": "^0.3.7",
     "weather-js": "^2.0.0",
     "yt-search": "^2.9.0",
     "ytdl-core": "^4.8.3"
@@ -62,5 +66,8 @@
   "bugs": {
     "url": "https://github.com/StickyJorden/StickierBot/issues"
   },
-  "homepage": "https://github.com/StickyJorden/StickierBot#readme"
+  "homepage": "https://github.com/StickyJorden/StickierBot#readme",
+  "devDependencies": {
+    "typescript": "^4.7.4"
+  }
 }
