--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@distube/soundcloud": "^0.2.2",
     "@distube/spotify": "^0.6.3",
     "@types/node": "^18.6.3",
+    "body-parser": "^1.20.0",
     "cataas-api": "^1.1.2",
     "chartjs-node-canvas": "^3.2.0",
     "cookies": "^0.8.0",
@@ -28,6 +29,7 @@
     "glob": "^7.2.0",
     "is-stream": "^2.0.0",
     "libsodium-wrappers": "^0.7.9",
+    "method-override": "^3.0.0",
     "module-alias": "^2.2.2",
     "moment-timezone": "^0.5.33",
     "mongodb": "^3.6.9",
